[package]
name = "hns"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4" # Added for timestamp conversion
scraper = "0.23.1" # Added for HTML parsing
ego-tree = "0.10.0"
